--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 
 	<build>
 		<plugins>
+		<plugin>
+		    <groupId>org.codehaus.mojo</groupId>
+		    <artifactId>sonar-maven-plugin</artifactId>
+		    <version>3.11.0.3922</version>
+		</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
